--- a/01-BlogAlkemy/wwwroot/css/site.css
+++ b/01-BlogAlkemy/wwwroot/css/site.css
@@ -14,9 +14,9 @@ a {
 
 
 .btn-primary {
-  color: #fff;
-  background-color: red;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #1861ac;
+    border-color: #1861ac;
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
@@ -69,4 +69,9 @@ body {
   width: 100%;
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
+}
+
+.add-hover:hover {
+    background-color: #CFD8DC;
+    border-radius: 5px;
 }
