add ignore upload and add searches

--- a/01-BlogAlkemy/Views/Posts/Delete.cshtml
+++ b/01-BlogAlkemy/Views/Posts/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Delete";
 }
 <div>
-    <a class="btn btn-secondary" asp-action="Index">Volver</a>
+    <a class="btn btn-outline-secondary" asp-action="Index">Volver</a>
 </div>
 <br />
 <h4>Eliminar</h4>
