--- a/01-BlogAlkemy/Views/Posts/Create.cshtml
+++ b/01-BlogAlkemy/Views/Posts/Create.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div>
-    <a class="btn btn-secondary" asp-action="Index">Volver</a>
+    <a class="btn btn-outline-secondary" asp-action="Index">Volver</a>
 </div>
 <br />
 <h4>Formulario</h4>
@@ -35,7 +35,7 @@
                 <span asp-validation-for="Image" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Crear" class="btn btn-primary" />
+                <input type="submit" value="Crear" class="btn btn-outline-primary" />
             </div>
         </form>
     </div>
