--- a/01-BlogAlkemy/Views/Posts/Details.cshtml
+++ b/01-BlogAlkemy/Views/Posts/Details.cshtml
@@ -5,11 +5,11 @@
 }
 
 <div>
-    <a class="btn btn-secondary" asp-action="Index">Volver</a>
+    <a class="btn btn-outline-secondary" asp-action="Index">Volver</a>
 </div>
 <br />
 
-<h4>Detalle</h4>
+<h4>Detalle de</h4>
 <h4>Publicación</h4>
 <hr />
 <div>
@@ -30,7 +30,7 @@
             Imagen
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Image)
+            <img src="/uploads/@Html.DisplayFor(model => model.Image)" height="100" alt="@Html.DisplayFor(model => model.Image)">
         </dd>
         <dt class="col-sm-2">
             Fecha de Creacion
