--- a/01-BlogAlkemy/Views/Posts/Edit.cshtml
+++ b/01-BlogAlkemy/Views/Posts/Edit.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div>
-    <a class="btn btn-secondary" asp-action="Index">Volver</a>
+    <a class="btn btn-outline-secondary" asp-action="Index">Volver</a>
 </div>
 <br />
 <h4>Editar</h4>
@@ -44,7 +44,7 @@
         </div>*@
             <br />
             <div class="form-group">
-                <input type="submit" value="Guardar" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-outline-primary" />
             </div>
         </form>
     </div>
