--- a/01-BlogAlkemy/Views/Posts/Index.cshtml
+++ b/01-BlogAlkemy/Views/Posts/Index.cshtml
@@ -4,10 +4,18 @@
     ViewData["Title"] = "Index";
 }
 
-<h4>Publicaciones</h4>
-<p>
-    <a class="btn btn-primary" asp-action="Create">Crear Nuevo</a>
-</p>
+<nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+        <div>
+            <h4 class="h4">Publicaciones</h4>
+            <a class="btn btn btn-outline-primary ml-2" asp-action="Create">Nuevo</a>
+        </div>
+        <form class="d-flex" asp-action="Index" method="post">
+            <input class="form-control mr-2" id="filtrar" name="filtrar" type="search" placeholder="Buscar" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Buscar</button>
+        </form>
+    </div>
+</nav>
 <table class="table">
     <thead>
         <tr>
