--- a/01-BlogAlkemy/Views/Shared/_Layout.cshtml
+++ b/01-BlogAlkemy/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3 navbg">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Posts" asp-action="Index">Blog-Alkemy</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
